# rust-stm32l432kc

./: .gitignore  Cargo.toml  Makefile  README.md  memory.x  nucleo_l432kc.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: blink.rs
src/: blink.rs  main.rs  serial.rs  timer.rs
