[package]
name = "rust-stm32l432kc"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Luca Zulian <lucagiuggia@gmail.com>"]

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
stm32l4xx-hal = { version = "0.5", features = ["rt", "stm32l4x2"] }

[[bin]]
name = "stm"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations