[package]
name = "rust-stm32l432kc"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Luca Zulian <lucagiuggia@gmail.com>"]

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432"] }
nb = "1.0.0"

[[bin]]
name = "stm"
path = "examples/blink.rs"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations